--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-12-16  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* COPYING:
+	* README:
+	Copy README from X11R5 release, and update COPYING to reflect the
+	original license from Adobe.
+
 2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
